fix critical security blockers, transactional proxies, and complexity